// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`box-shadow: 5px 5px red: app-harmony(dom-c) 1`] = `
{
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: 5px 5px red: app-harmony(nv-c) 1`] = `
{
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000))",
      "valueCode": "UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000)",
    },
  },
}
`;

exports[`box-shadow: invalid: app-harmony(dom-c) 1`] = `
{
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: invalid: app-harmony(nv-c) 1`] = `
{
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 0, 0, 0, 0, 0))",
      "valueCode": "UniNativeBoxShadow(false, 0, 0, 0, 0, 0)",
    },
  },
}
`;

exports[`box-shadow: none: app-harmony(dom-c) 1`] = `
{
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: none: app-harmony(nv-c) 1`] = `
{
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(null)",
      "valueCode": "null",
    },
  },
}
`;
